--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -1,3 +1,9 @@
+
+@font-face {
+  font-family: Roboto;
+  src: url("../font/Roboto-Light.ttf");
+}
+
 * {
   box-sizing: border-box!important;
 }
@@ -6,5 +12,6 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Roboto;
 }
 
